bug #20691 (INSERT (DEFAULT) may insert garbage with NO DEFAULT NOT NULL field)

Some fields (GEOMETRY first of all) can't be handled properly in this
case at all. So we return an error in this case